--- a/commands.tex
+++ b/commands.tex
@@ -6,7 +6,7 @@
 \newcommand{\hpspace}{\Lambda}
 \newcommand{\D}{\mathcal{D}}
 \newcommand{\xv}{\mathbf{x}}
-\newcommand{\yv}{\mathbf{x}}
+\newcommand{\yv}{\mathbf{y}}
 \renewcommand{\xi}[1][i]{\xv^{(#1)}}
 \newcommand{\yi}[1][i]{y^{(#1)}}
 \newcommand{\Dset}{\{(\xi, \yi)\ |\ i = 1, \dots, n\}}
