--- a/references.bib
+++ b/references.bib
@@ -1094,3 +1094,13 @@
     year      = {1988},
     publisher = {JSTOR}
 }
+
+@article{chen2015xgboost,
+    title   = {Xgboost: extreme gradient boosting},
+    author  = {Chen, Tianqi and He, Tong and Benesty, Michael and Khotilovich, Vadim and Tang, Yuan and Cho, Hyunsu and Chen, Kailong and Mitchell, Rory and Cano, Ignacio and Zhou, Tianyi and others},
+    journal = {R package version 0.4-2},
+    volume  = {1},
+    number  = {4},
+    pages   = {1--4},
+    year    = {2015}
+}
