--- a/references.bib
+++ b/references.bib
@@ -714,14 +714,8 @@
 @article{schalk2022distcwb,
   title         = {Privacy-Preserving and Lossless Distributed Estimation of High-Dimensional Generalized Additive Mixed Models},
   author        = {Schalk, Daniel and Bischl, Bernd and R{\"u}gamer, David},
-  year          = {2022},
-  journal       = {arXiv preprint arXiv:2210.07723. Currently under review in the Journal of Computational and Graphical Statistics},
-  eprint        = {2210.07723},
-  archiveprefix = {arXiv},
-  date          = {2022-10-14},
-  primaryclass  = {stat.ML},
-  url           = {<br> <a href="https://arxiv.org/abs/2210.07723"> link </a> | <a href="https://arxiv.org/pdf/2210.07723.pdf"> pdf </a>},
-  tag           = {Boosting}
+  year          = {2023},
+  journal       = {arXiv preprint arXiv:2210.07723}
 }
 
 @article{chen2018privacy,
@@ -1040,13 +1034,16 @@
 }
 
 @article{schalk2022dsBinVal,
-    title   = {{dsBinVal}: Conducting distributed {ROC} analysis using {DataSHIELD}},
-    author  = {Schalk, Daniel and Hoffmann, Verena S and Bischl, Bernd and Mansmann, Ulrich},
-    journal = {Currently under review in the Journal of Open Source Software, \url{github.com/openjournals/joss-reviews/issues/4545}},
-    volume  = {},
-    number  = {},
-    pages   = {},
-    year    = {2022}
+    doi = {10.21105/joss.04545},
+    url = {https://doi.org/10.21105/joss.04545},
+    year = {2023},
+    publisher = {The Open Journal},
+    volume = {8},
+    number = {82},
+    pages = {4545},
+    author = {Daniel Schalk and Verena Sophia Hoffmann and Bernd Bischl and Ulrich Mansmann},
+    title = {{dsBinVal}: Conducting distributed ROC analysis using DataSHIELD},
+    journal = {Journal of Open Source Software}
 }
 
 @article{fawcett2006introduction,
@@ -1103,4 +1100,12 @@
     number  = {4},
     pages   = {1--4},
     year    = {2015}
+}
+
+@inproceedings{gentry2009fully,
+  title={Fully homomorphic encryption using ideal lattices},
+  author={Gentry, Craig},
+  booktitle={Proceedings of the forty-first annual ACM symposium on Theory of computing},
+  pages={169--178},
+  year={2009}
 }
