--- a/tex/fig-cwb-anim.tex
+++ b/tex/fig-cwb-anim.tex
@@ -1,5 +1,5 @@
 
-\begin{frame}{Example: Life expectancy (nonlinear)}
+\begin{frame}{Fitting process: Life expectancy}
 	\begin{figure}
 		\centering
 		\includegraphics[width=\textwidth]{figures/cwb-anim/fig-iter-0001.png}
@@ -8,7 +8,7 @@
 \end{frame}
 
 
-\begin{frame}{Example: Life expectancy (nonlinear)}
+\begin{frame}{Fitting process: Life expectancy}
 	\begin{figure}
 		\centering
 		\includegraphics[width=\textwidth]{figures/cwb-anim/fig-iter-0002.png}
@@ -17,7 +17,7 @@
 \end{frame}
 
 
-\begin{frame}{Example: Life expectancy (nonlinear)}
+\begin{frame}{Fitting process: Life expectancy}
 	\begin{figure}
 		\centering
 		\includegraphics[width=\textwidth]{figures/cwb-anim/fig-iter-0005.png}
@@ -26,7 +26,7 @@
 \end{frame}
 
 
-\begin{frame}{Example: Life expectancy (nonlinear)}
+\begin{frame}{Fitting process: Life expectancy}
 	\begin{figure}
 		\centering
 		\includegraphics[width=\textwidth]{figures/cwb-anim/fig-iter-0010.png}
@@ -35,7 +35,7 @@
 \end{frame}
 
 
-\begin{frame}{Example: Life expectancy (nonlinear)}
+\begin{frame}{Fitting process: Life expectancy}
 	\begin{figure}
 		\centering
 		\includegraphics[width=\textwidth]{figures/cwb-anim/fig-iter-0015.png}
@@ -44,7 +44,7 @@
 \end{frame}
 
 
-\begin{frame}{Example: Life expectancy (nonlinear)}
+\begin{frame}{Fitting process: Life expectancy}
 	\begin{figure}
 		\centering
 		\includegraphics[width=\textwidth]{figures/cwb-anim/fig-iter-0017.png}
@@ -53,7 +53,7 @@
 \end{frame}
 
 
-\begin{frame}{Example: Life expectancy (nonlinear)}
+\begin{frame}{Fitting process: Life expectancy}
 	\begin{figure}
 		\centering
 		\includegraphics[width=\textwidth]{figures/cwb-anim/fig-iter-0018.png}
@@ -62,7 +62,7 @@
 \end{frame}
 
 
-\begin{frame}{Example: Life expectancy (nonlinear)}
+\begin{frame}{Fitting process: Life expectancy}
 	\begin{figure}
 		\centering
 		\includegraphics[width=\textwidth]{figures/cwb-anim/fig-iter-0020.png}
@@ -71,7 +71,7 @@
 \end{frame}
 
 
-\begin{frame}{Example: Life expectancy (nonlinear)}
+\begin{frame}{Fitting process: Life expectancy}
 	\begin{figure}
 		\centering
 		\includegraphics[width=\textwidth]{figures/cwb-anim/fig-iter-0023.png}
@@ -80,7 +80,7 @@
 \end{frame}
 
 
-\begin{frame}{Example: Life expectancy (nonlinear)}
+\begin{frame}{Fitting process: Life expectancy}
 	\begin{figure}
 		\centering
 		\includegraphics[width=\textwidth]{figures/cwb-anim/fig-iter-0024.png}
@@ -89,7 +89,7 @@
 \end{frame}
 
 
-\begin{frame}{Example: Life expectancy (nonlinear)}
+\begin{frame}{Fitting process: Life expectancy}
 	\begin{figure}
 		\centering
 		\includegraphics[width=\textwidth]{figures/cwb-anim/fig-iter-0030.png}
@@ -98,7 +98,7 @@
 \end{frame}
 
 
-\begin{frame}{Example: Life expectancy (nonlinear)}
+\begin{frame}{Fitting process: Life expectancy}
 	\begin{figure}
 		\centering
 		\includegraphics[width=\textwidth]{figures/cwb-anim/fig-iter-0050.png}
@@ -107,7 +107,7 @@
 \end{frame}
 
 
-\begin{frame}{Example: Life expectancy (nonlinear)}
+\begin{frame}{Fitting process: Life expectancy}
 	\begin{figure}
 		\centering
 		\includegraphics[width=\textwidth]{figures/cwb-anim/fig-iter-0070.png}
@@ -116,7 +116,7 @@
 \end{frame}
 
 
-\begin{frame}{Example: Life expectancy (nonlinear)}
+\begin{frame}{Fitting process: Life expectancy}
 	\begin{figure}
 		\centering
 		\includegraphics[width=\textwidth]{figures/cwb-anim/fig-iter-0088.png}
@@ -125,7 +125,7 @@
 \end{frame}
 
 
-\begin{frame}{Example: Life expectancy (nonlinear)}
+\begin{frame}{Fitting process: Life expectancy}
 	\begin{figure}
 		\centering
 		\includegraphics[width=\textwidth]{figures/cwb-anim/fig-iter-0089.png}
@@ -134,7 +134,7 @@
 \end{frame}
 
 
-\begin{frame}{Example: Life expectancy (nonlinear)}
+\begin{frame}{Fitting process: Life expectancy}
 	\begin{figure}
 		\centering
 		\includegraphics[width=\textwidth]{figures/cwb-anim/fig-iter-0090.png}
@@ -143,7 +143,7 @@
 \end{frame}
 
 
-\begin{frame}{Example: Life expectancy (nonlinear)}
+\begin{frame}{Fitting process: Life expectancy}
 	\begin{figure}
 		\centering
 		\includegraphics[width=\textwidth]{figures/cwb-anim/fig-iter-0110.png}
@@ -152,7 +152,7 @@
 \end{frame}
 
 
-\begin{frame}{Example: Life expectancy (nonlinear)}
+\begin{frame}{Fitting process: Life expectancy}
 	\begin{figure}
 		\centering
 		\includegraphics[width=\textwidth]{figures/cwb-anim/fig-iter-0130.png}
@@ -161,7 +161,7 @@
 \end{frame}
 
 
-\begin{frame}{Example: Life expectancy (nonlinear)}
+\begin{frame}{Fitting process: Life expectancy}
 	\begin{figure}
 		\centering
 		\includegraphics[width=\textwidth]{figures/cwb-anim/fig-iter-0150.png}
