--- a/tex/tab-example.tex
+++ b/tex/tab-example.tex
@@ -1,15 +1,19 @@
 \begin{table}
-\centering
-\begin{tabular}[t]{rlrrr}
-\toprule
-\textbf{Life.expectancy} & \textbf{Country} & \textbf{Year} & \textbf{BMI} & \textbf{Adult.Mortality}\\
-\midrule
-\cellcolor{gray!6}{53.2} & \cellcolor{gray!6}{ETH} & \cellcolor{gray!6}{2002} & \cellcolor{gray!6}{12.9} & \cellcolor{gray!6}{369}\\
-81.0 & GER & 2015 & 62.3 & 68\\
-\cellcolor{gray!6}{76.8} & \cellcolor{gray!6}{USA} & \cellcolor{gray!6}{2000} & \cellcolor{gray!6}{6.1} & \cellcolor{gray!6}{114}\\
-79.1 & USA & 2014 & 69.1 & 14\\
-\cellcolor{gray!6}{58.9} & \cellcolor{gray!6}{ZAF} & \cellcolor{gray!6}{2011} & \cellcolor{gray!6}{47.9} & \cellcolor{gray!6}{413}\\
-69.0 & ZAF & 2013 & 49.5 & 371\\
-\bottomrule
-\end{tabular}
+  \centering
+  \begin{tabular}[t]{rlrrr}
+    \toprule
+    \begin{tabular}{@{}c@{}}\textbf{Life.expectancy} \\ in years\end{tabular} &
+      \begin{tabular}{@{}c@{}}\textbf{Country} \\ \phantom{in years}\end{tabular} &
+      \begin{tabular}{@{}c@{}}\textbf{Year} \\ \phantom{in years}\end{tabular} &
+      \begin{tabular}{@{}c@{}}\textbf{BMI} \\ in feet/inches \end{tabular} &
+      \begin{tabular}{@{}c@{}}\textbf{Adult.Mortality} \\ per 1000 citizens\end{tabular}\\
+    \midrule
+    \cellcolor{gray!6}{53.2} & \cellcolor{gray!6}{ETH} & \cellcolor{gray!6}{2002} & \cellcolor{gray!6}{12.9} & \cellcolor{gray!6}{369}\\
+    81.0 & GER & 2015 & 62.3 & 68\\
+    \cellcolor{gray!6}{76.8} & \cellcolor{gray!6}{USA} & \cellcolor{gray!6}{2000} & \cellcolor{gray!6}{6.1} & \cellcolor{gray!6}{114}\\
+    79.1 & USA & 2014 & 69.1 & 14\\
+    \cellcolor{gray!6}{58.9} & \cellcolor{gray!6}{ZAF} & \cellcolor{gray!6}{2011} & \cellcolor{gray!6}{47.9} & \cellcolor{gray!6}{413}\\
+    69.0 & ZAF & 2013 & 49.5 & 371\\
+    \bottomrule
+  \end{tabular}
 \end{table}
